WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23081
These files are no longer part of the KDE libraries
https://bugs.webkit.org/show_bug.cgi?id=23081
Summary
These files are no longer part of the KDE libraries
David Kilzer (:ddkilzer)
Reported
2009-01-02 12:25:11 PST
* SUMMARY Remove "This file is part of the KDE libraries" from source since these files aren't part of the KDE libraries any longer. These lines have been removed individually in the past; just cleaning up the stragglers.
Attachments
Patch v1
(16.70 KB, patch)
2009-01-02 12:30 PST
,
David Kilzer (:ddkilzer)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2009-01-02 12:30:10 PST
Created
attachment 26377
[details]
Patch v1
Darin Adler
Comment 2
2009-01-02 12:43:41 PST
Comment on
attachment 26377
[details]
Patch v1 r=me
David Kilzer (:ddkilzer)
Comment 3
2009-01-02 13:11:06 PST
$ git svn dcommit Committing to
http://svn.webkit.org/repository/webkit/trunk
... M JavaScriptCore/ChangeLog M JavaScriptCore/parser/Lexer.h M JavaScriptCore/wtf/HashCountedSet.h M JavaScriptCore/wtf/RetainPtr.h M JavaScriptCore/wtf/VectorTraits.h M WebCore/ChangeLog M WebCore/bridge/testbindings.cpp M WebCore/html/HTMLEntityNames.gperf M WebCore/loader/Cache.h M WebCore/loader/CachedCSSStyleSheet.h M WebCore/loader/CachedResourceClient.h M WebCore/loader/CachedResourceClientWalker.cpp M WebCore/loader/CachedResourceClientWalker.h M WebCore/loader/CachedScript.cpp M WebCore/loader/CachedScript.h M WebCore/loader/CachedXBLDocument.cpp M WebCore/loader/CachedXBLDocument.h M WebCore/loader/CachedXSLStyleSheet.cpp M WebCore/loader/CachedXSLStyleSheet.h M WebCore/rendering/GapRects.h M WebCore/xml/XMLSerializer.cpp Committed
r39556
http://trac.webkit.org/changeset/39556
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug