        Bug 23081: These files are no longer part of the KDE libraries

<https://bugs.webkit.org/show_bug.cgi?id=23081>

        Reviewed by Darin Adler.

        Removed "This file is part of the KDE libraries" comment from
        source files.  Added or updated Apple copyrights as well.

JavaScriptCore:

        * parser/Lexer.h:
        * wtf/HashCountedSet.h:
        * wtf/RetainPtr.h:
        * wtf/VectorTraits.h:

WebCore:

        No tests since there are only changes to comments.

        * bridge/testbindings.cpp:
        * html/HTMLEntityNames.gperf:
        * loader/Cache.h:
        * loader/CachedCSSStyleSheet.h:
        * loader/CachedResourceClient.h:
        * loader/CachedResourceClientWalker.cpp:
        * loader/CachedResourceClientWalker.h:
        * loader/CachedScript.cpp:
        * loader/CachedScript.h:
        * loader/CachedXBLDocument.cpp:
        * loader/CachedXBLDocument.h:
        * loader/CachedXSLStyleSheet.cpp:
        * loader/CachedXSLStyleSheet.h:
        * rendering/GapRects.h:
        * xml/XMLSerializer.cpp:

Canonical link: https://commits.webkit.org/31755@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39556 268f45cc-cd09-0410-ab3c-d52691b4dbfc